@@ -2,6 +2,8 @@ LIST OF CHANGES
 
  - Install all files, including cgi-related, within the install action.
  - Remove instrument utilisation views for web pages.
+ - Deprecate 'request approval' instrument status, enable status change
+   from either of down statuses directly to 'wash required'.
  - Remove code and tests for deprecated instrument statuses.
  - Composition-enabled LIMs object and reference finder.
  - Subset support added to the rpt key based composition factory.
